Fixed timeline alignment

--- a/resources/scss/views/calendar/_grid-week.scss
+++ b/resources/scss/views/calendar/_grid-week.scss
@@ -96,6 +96,7 @@
 
     .time-line {
         position: absolute;
+        left: 0;
         width: 100%;
         background-color: rgba($c-red-500, 0.3);
         opacity: 0;
